Added a method that enables/disables the block action so that we

disable the block action when switching to a group chat.
BUG: 297187